@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.12 2008-06-01 20:20:25 nicm Exp $
+# $Id: GNUmakefile,v 1.13 2008-06-03 05:10:38 nicm Exp $
 
 .PHONY: clean
 
@@ -13,8 +13,8 @@ META?= \002
 
 SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       xmalloc.c xmalloc-debug.c input.c input-keys.c screen.c screen-display.c \
-      window.c session.c log.c client.c client-msg.c client-fn.c \
-      key-string.c key-bindings.c resize.c cmd.c cmd-new-session.c \
+      window.c session.c log.c client.c client-msg.c client-fn.c cfg.c \
+      key-string.c key-bindings.c resize.c cmd.c cmd-generic.c \
       cmd-detach-client.c cmd-list-sessions.c cmd-new-window.c cmd-bind-key.c \
       cmd-unbind-key.c cmd-previous-window.c cmd-last-window.c cmd-list-keys.c \
       cmd-set-option.c cmd-rename-window.c cmd-select-window.c \
@@ -23,7 +23,9 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-link-window.c cmd-unlink-window.c cmd-next-window.c cmd-send-keys.c \
       cmd-swap-window.c cmd-rename-session.c cmd-kill-session.c \
       cmd-switch-client.c cmd-has-session.c cmd-scroll-mode.c cmd-copy-mode.c \
-      cmd-paste-buffer.c window-scroll.c window-more.c window-copy.c \
+      cmd-paste-buffer.c cmd-new-session.c cmd-start-server.c \
+      cmd-kill-server.c \
+      window-scroll.c window-more.c window-copy.c \
       tty.c tty-keys.c tty-write.c screen-write.c screen-redraw.c
 
 CC?= gcc
