@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.36 2008-06-02 21:08:36 nicm Exp $ */
+/* $Id: cmd.c,v 1.37 2008-06-03 05:10:38 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -30,6 +30,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_copy_mode_entry,
 	&cmd_detach_client_entry,
 	&cmd_has_session_entry,
+	&cmd_kill_server_entry,
 	&cmd_kill_session_entry,
 	&cmd_kill_window_entry,
 	&cmd_last_window_entry,
